--- a/movie.html
+++ b/movie.html
@@ -15,6 +15,10 @@
         <form action="" id="section1" class="section1">
             <input type="text" placeholder="search" name="" id="search">
         </form>
+
+        <div class="name">
+            Samkayzee
+        </div>
     </nav>
 
     <section class="main" id="main">
