--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <form action="" id="section1" class="section1">
-            <input type="text" placeholder="search" name="" id="search">
+            <input type="search" placeholder="search" name="" id="search">
         </form>
 
         <div class="name">
